crates/cribo/tests/snapshots/bundled_code@xfail_module_side_effects_circular_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_side_effects_circular_order/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import functools
import types
my_package = types.SimpleNamespace()
my_package.__name__ = 'my_package'
C_CONSTANT = 21
@functools.cache
def __cribo_init___cribo_c04dc3_my_package():
    module = types.SimpleNamespace()
    module.__name__ = 'my_package'
    __cribo_init_result = __cribo_init___cribo_c04dc3_my_package()
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(my_package, attr, getattr(__cribo_init_result, attr))
    mod_a = my_package.mod_a
    module.mod_a = mod_a
    TOP_LEVEL_VAL = mod_a.A_VALUE
    module.TOP_LEVEL_VAL = TOP_LEVEL_VAL
    print(module.TOP_LEVEL_VAL)
    mod_l = types.SimpleNamespace()
    mod_c = types.SimpleNamespace()
    mod_c.C_CONSTANT = C_CONSTANT
    return module
@functools.cache
def __cribo_init___cribo_e90488_my_package_mod_a():
    module = types.SimpleNamespace()
    module.__name__ = 'my_package.mod_a'
    __cribo_init_result = __cribo_init___cribo_c04dc3_my_package()
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(my_package, attr, getattr(__cribo_init_result, attr))
    my_package.mod_b = __cribo_init___cribo_d862bd_my_package_mod_b()
    mod_b = my_package.mod_b
    module.mod_b = mod_b
    A_VALUE = f"A -> {mod_b.B_DERIVED_VALUE}"
    module.A_VALUE = A_VALUE
    return module
@functools.cache
def __cribo_init___cribo_d862bd_my_package_mod_b():
    module = types.SimpleNamespace()
    module.__name__ = 'my_package.mod_b'
    mod_c = types.SimpleNamespace()
    module.mod_c = mod_c
    mod_c.C_CONSTANT = C_CONSTANT
    B_DERIVED_VALUE = mod_c.C_CONSTANT * 2
    module.B_DERIVED_VALUE = B_DERIVED_VALUE

    def get_b_value():
        return f"B using '{LEAF_VALUE}' and derived value '{B_DERIVED_VALUE}'"
    module.get_b_value = get_b_value
    return module
__cribo_init___cribo_e90488_my_package_mod_a()
__cribo_init___cribo_d862bd_my_package_mod_b()
__cribo_init___cribo_c04dc3_my_package()
__cribo_init_result = __cribo_init___cribo_c04dc3_my_package()
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(my_package, attr, getattr(__cribo_init_result, attr))
TOP_LEVEL_VAL = my_package.TOP_LEVEL_VAL
print(f"Result: {TOP_LEVEL_VAL}")
