crates/cribo/tests/snapshots/bundled_code@xfail_namespace_attribute_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_namespace_attribute_reference/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
mypkg_compat = _cribo.types.SimpleNamespace(__name__='mypkg.compat', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_19d82f_mypkg_compat(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    try:
        JSONDecodeError = _cribo.json.JSONDecodeError
        mypkg_compat.JSONDecodeError = JSONDecodeError
    except ImportError:

        class JSONDecodeError(ValueError):

            def __init__(self, msg, doc, pos):
                super().__init__(msg)
                self.msg = msg
                self.doc = doc
                self.pos = pos
    bytes = __import__('builtins').bytes
    self.bytes = bytes
    basestring = str
    self.basestring = basestring
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg_compat.__init__ = _cribo_init___cribo_19d82f_mypkg_compat
mypkg = _cribo.types.SimpleNamespace(__name__='mypkg', __initializing__=False, __initialized__=False)
mypkg.compat = mypkg_compat
mypkg_exceptions = _cribo.types.SimpleNamespace(__name__='mypkg.exceptions', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_4c6596_mypkg_exceptions(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    mypkg_exceptions.__initializing__ = True
    __cribo_init_result = _cribo_init___cribo_d4de1c_mypkg(mypkg)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(mypkg, attr, getattr(__cribo_init_result, attr))

    class MyError(Exception):
        """Base exception class"""
        pass
    MyError.__module__ = 'mypkg.exceptions'
    self.MyError = MyError

    class MyJSONError(MyError, mypkg.compat.JSONDecodeError):
        """JSON error that inherits from compat JSONDecodeError"""

        def __init__(self, *args):
            mypkg.compat.JSONDecodeError.__init__(self, *args)
            MyError.__init__(self, str(args[0]) if args else "")
    MyJSONError.__module__ = 'mypkg.exceptions'
    self.MyJSONError = MyJSONError
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg_exceptions.__init__ = _cribo_init___cribo_4c6596_mypkg_exceptions
mypkg.exceptions = mypkg_exceptions
def _cribo_init___cribo_d4de1c_mypkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        self.__initializing__ = False
        return self
    mypkg.__initializing__ = True
    __cribo_init_result = _cribo_init___cribo_d4de1c_mypkg(mypkg)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(mypkg, attr, getattr(__cribo_init_result, attr))
    global mypkg_compat
    mypkg.__initializing__ = True
    mypkg_compat = _cribo_init___cribo_19d82f_mypkg_compat(mypkg_compat)
    compat = mypkg.compat
    self.compat = compat
    mypkg.__initializing__ = True
    __cribo_init_result = _cribo_init___cribo_d4de1c_mypkg(mypkg)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(mypkg, attr, getattr(__cribo_init_result, attr))
    global mypkg_exceptions
    mypkg.__initializing__ = True
    mypkg_exceptions = _cribo_init___cribo_4c6596_mypkg_exceptions(mypkg_exceptions)
    exceptions = mypkg.exceptions
    self.exceptions = exceptions
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg.__init__ = _cribo_init___cribo_d4de1c_mypkg
try:
    raise MyJSONError("Test error", "doc", 42)
except MyJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
